<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NowPlayingActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="Now Playing"
        app:titleTextColor="@color/white"
        app:menu="@menu/menu_main"/>
    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <!--this time uses imageview inside linearlayout since not all album arts are square-->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center">
            <ImageView
                android:id="@+id/albumArt"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@drawable/drop_shadow"
                android:contentDescription="@string/album_art" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:gravity="center"
                android:text="@string/title"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true" />
            <TextView
                android:id="@+id/tvArtist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/artist"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true" />
            <TextView
                android:id="@+id/tvAlbum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="16sp"
                android:text="@string/album"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:scrollHorizontally="true" />
        </LinearLayout>
        <SeekBar
            android:id="@+id/sbTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="0dp"
            android:min="0"
            android:max="500"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="0dp"
            android:paddingBottom="16dp">
            <TextView
                android:id="@+id/tvElapsedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:text="@string/time_zero_values" />
            <TextView
                android:id="@+id/tvTotalTime"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingStart="0dp"
                android:paddingEnd="12dp"
                android:gravity="end"
                android:text="@string/time_zero_values" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">
            <ImageButton
                android:id="@+id/btnPrev"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginEnd="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_shape_button"
                android:src="@drawable/ic_previous"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/album_art" />
            <ImageButton
                android:id="@+id/btnPlayPause"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:background="@drawable/round_shape_button"
                android:src="@drawable/ic_play"
                android:padding="22dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/play" />
            <ImageButton
                android:id="@+id/btnNext"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="4dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/round_shape_button"
                android:src="@drawable/ic_next"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>